Revert "code refactor"
This reverts commit 31d3127450938f8b3851015ab219fd2a749a3047.